# projekt-benchmark

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/raw/: heart+disease.data
frontend/: .env.example  .gitignore  docker-compose.yml  home.py  pyproject.toml
frontend/auth/: constants.py  database.py  join_info_form.py  join_info_onboarding.py  login_panel.py  oauth_sync.py  passwords.py  recaptcha.py  recaptcha_widget.py  repository.py  session.py
frontend/components/: admin_panel.py  join_info_form.py  join_info_onboarding.py  login_panel.py  pending_approval.py  recaptcha_widget.py
frontend/core/: config.py  database.py
frontend/db/init/: 01_schema.sql  02_tasks_schema.sql
frontend/views/: instructions.py  leaderboard.py  mock_data.py  run_form.py  run_history.py  welcome_page.py
frontend/views/admin/: admin_panel.py
models/: abalone.py  cifar10.py  digits.py  digits_mlp.py  heart_disease.py  wine_quality.py
models/autoencoders/: conv_autoencoder.py  dense_autoencoder_image.py  dense_autoencoder_tabular.py  variational_autoencoder_image.py  variational_autoencoder_tabular.py
models/heavy/: ai_student_impact_heavy.py  airplane_satisfaction_heavy.py  apple_quality_heavy.py  credit_score_heavy.py  fashion_mnist_heavy.py  healthcare_heavy.py  mobile_price_heavy.py  stl10_heavy.py  (+1 more)
scripts/: athena.py  run_benchmark_on_athena.py
src/: arg_parse.py  config.py  criterion.py  dataset.py  logging.py  optimizers.py  plots.py  train.py
user_configs/: my_config.yaml
weights/: adam_digits_2025-07-13_15-06
(+120 files in other folders)
