[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "projekt-benchmark"
version = "0.1.0"
description = "Benchmark comparing gradient-based and gradient-free optimizers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "cupy-cuda13x>=14.0.1",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "cma>=3.3",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "paramiko>=5.0.0",
]

[tool.flake8]
max-line-length = 120
exclude = [".venv", ".git", "__pycache__", "reports","data",".github","weights"]
